tests/ui/nll/closure-requirements/region-lbr-anon-does-not-outlive-static.stderr
error: lifetime may not live long enough
  --> $DIR/region-lbr-anon-does-not-outlive-static.rs:9:5
   |
LL | fn foo(x: &u32) -> &'static u32 {
   |           - let's call the lifetime of this reference `'1`
LL |     &*x
   |     ^^^ returning this value requires that `'1` must outlive `'static`

error: aborting due to previous error

